replace remove(0) with removeFirst()